[package]
name = "ttspico-sys"
version = "0.1.0"
edition = "2018"

authors = ["Paolo Jovon <paolo.jovon@gmail.com>"]
readme = "../README.md"
description = """
Low-level bindings to the Pico TTS engine.
(builds Pico from source, includes patches for x86_64 support)
"""
categories = ["external-ffi-bindings", "multimedia::audio", "text-processing"]
license = "Apache-2.0"

build = "build/build.rs"
links = "svoxpico"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "^0.2"

[build-dependencies]
glob = "^0.3"
cc = { version = "^1.0", features = ["parallel"] }
