[package]
name = "ttspico-sys"
version = "0.1.3"
edition = "2018"

repository = "https://github.com/UberLambda/ttspico-rs"
authors = ["Paolo Jovon <paolo.jovon@gmail.com>"]
readme = "../README.md"
description = """
Low-level bindings to the Pico TTS engine.
(builds Pico from source, includes patches for x86_64 support)
"""
categories = ["external-ffi-bindings", "multimedia::audio", "text-processing"]
license = "Apache-2.0"

build = "build/build.rs"
links = "svoxpico"

[dependencies]
libc = "^0.2"

[build-dependencies]
glob = "^0.3"
cc = { version = "^1.0", features = ["parallel"] }
