[package]
name = "ttspico"
version = "0.1.1"
edition = "2018"

repository = "https://github.com/UberLambda/ttspico-rs"
authors = ["Paolo Jovon <paolo.jovon@gmail.com>"]
readme = "../README.md"
description = """
High-level bindings to the Pico TTS engine.
(includes patches for x86_64 support)
"""
categories = ["api-bindings", "multimedia::audio", "text-processing"]
license = "Apache-2.0"

[badges]
azure-devops = { project = "pj-public/UberLambda", pipeline = "ttspico-rs", build = "1" }

[dependencies]
ttspico-sys = { path = "../ttspico-sys", version = "^0.1" }

[dev-dependencies]
cpal = "^0.10" # (for examples/hello.rs)
