[package]
name = "ttspico"
version = "0.1.2"
edition = "2018"

repository = "https://github.com/UberLambda/ttspico-rs"
authors = ["Paolo Jovon <paolo.jovon@gmail.com>", "Sergio Tortosa Benedito"]
readme = "../README.md"
description = """
High-level bindings to the Pico TTS engine.
(includes patches for x86_64 support)
"""
categories = ["api-bindings", "multimedia::audio", "text-processing"]
license = "Apache-2.0"

[badges]
azure-devops = { project = "pj-public/UberLambda", pipeline = "ttspico-rs", build = "1" }

[dependencies]
ttspico-sys = { path = "../ttspico-sys", version = "^0.1" }

[dev-dependencies]
cpal = "^0.10" # (for examples/hello.rs)

# See https://github.com/RustAudio/cpal/issues/342
[target.'cfg(target_os = "windows")'.dev-dependencies]
winapi = { version = "0.3", features = ["audiosessiontypes", "audioclient", "coml2api", "combaseapi", "debug", "devpkey", "handleapi", "ksmedia", "mmdeviceapi", "objbase", "std", "synchapi", "winbase", "winuser"] }
